# qrcode-zxing-tests

./: .gitignore  CMakeLists.txt  DecoderResult.h  LICENSE  README.md  RawReader.cpp  Reader.cpp  build.sh  conanfile.txt
.github/workflows/: release.yaml
